--- a/.github/workflows/run-dagger-pipeline-manual.yml
+++ b/.github/workflows/run-dagger-pipeline-manual.yml
@@ -16,7 +16,7 @@ jobs:
           python-version: '3.8'
       
       - name: Install the correct Dagger package
-        run: pip install dagger-io
+        run: pip install dagger-io==0.11.4
       
       - name: Run Dagger Pipeline
         run: python dagger/src/main/__init__.py
