--- a/.github/workflows/run-dagger-pipeline-manual.yml
+++ b/.github/workflows/run-dagger-pipeline-manual.yml
@@ -15,7 +15,7 @@ jobs:
         with:
           verb: call 
           module: github.com/EmmS21/financialadvisor
-          args: run_pipeline
+          args: run-pipeline
           cloud-token: ${{ secrets.DAGGER_CLOUD_TOKEN }}
         env:
           API_KEY: ${{ secrets.API_KEY }}
