--- a/.github/workflows/run-dagger-pipeline-manual.yml
+++ b/.github/workflows/run-dagger-pipeline-manual.yml
@@ -15,7 +15,7 @@ jobs:
         with:
           verb: call 
           module: github.com/EmmS21/financialadvisor
-          args: run-pipeline
+          args: run-pipeline --apiKey=env:API_KEY --sheet=env:SHEET_ID --connection=env:DB_CONNECTION --hftoken=env:HF_TOKEN --openai=env:OPENAI_KEY --textBelt=env:TEXTBELT_KEY --mobileNums=env:MOBILE_NUMS --database=env:DATABASE --collection=env:COLLECTION
           cloud-token: ${{ secrets.DAGGER_CLOUD_TOKEN }}
         env:
           API_KEY: ${{ secrets.API_KEY }}
