--- a/.github/workflows/run-dagger-pipeline.yml
+++ b/.github/workflows/run-dagger-pipeline.yml
@@ -12,16 +12,13 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
       
-      - name: Set up Python
-        uses: actions/setup-python@v2
+      - name: Dagger for GitHub
+        uses: dagger/dagger-for-github@v5.6.0
         with:
-          python-version: '3.8'
-      
-      - name: Install Dagger
-        run: pip install dagger
-      
-      - name: Run Dagger Pipeline
-        run: python dagger/src/main/__init__.py
+          verb: call 
+          module: github.com/EmmS21/financialadvisor
+          args: run-pipeline --apiKey=env:API_KEY --sheet=env:SHEET_ID --connection=env:DB_CONNECTION --hftoken=env:HF_TOKEN --openai=env:OPENAI_KEY --textBelt=env:TEXTBELT_KEY --database=env:DATABASE --collection=env:COLLECTION
+          cloud-token: ${{ secrets.DAGGER_CLOUD_TOKEN }}
         env:
           API_KEY: ${{ secrets.API_KEY }}
           SHEET_ID: ${{ secrets.SHEET_ID }}
@@ -29,6 +26,5 @@ jobs:
           HF_TOKEN: ${{ secrets.HF_TOKEN }}
           OPENAI_KEY: ${{ secrets.OPENAI_KEY }}
           TEXTBELT_KEY: ${{ secrets.TEXTBELT_KEY }}
-          MOBILE_NUMS: '+15162341744,+15512259418'
           DATABASE: 'financial_data'
           COLLECTION: 'transactions'
